CSS: fix element spacing on order plan on mobile & desktop

--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,7 @@ body {
 .order-subscription-plan {
     display: flex;
     align-items: center;
+    gap: 20px;
     margin: 24px;
     padding: 17px 16px 16px;
     background-color: #f7f9ff;
@@ -134,6 +135,7 @@ body {
 }
 
 .change-plan {
+    margin-left: auto;
     font-size: 0.8125rem;
     color: #382ae1;
     font-weight: 700;
